# ConvEvolution_Computer_Architecture

./: CMakeLists.txt  OpenMP.h  OpenMPAndSIMD.h  README.md  SIMD.h  choose.h  loopunrolling.h  main.cpp  naiive.h
